objects/noduplicates__Matching_Rule_Field__c.object
<CustomObject>
    <fields>
        <fullName>noduplicates__Cross_Field__c</fullName>
        <label>Cross Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Matching_Rule__c</fullName>
        <label>Matching Rule</label>
        <referenceTo>noduplicates__Matching_Rule__c</referenceTo>
        <relationshipLabel>Matching Rule Fields</relationshipLabel>
        <relationshipName>Matching_Rule_Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>noduplicates__Number__c</fullName>
        <label>Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>noduplicates__Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>noduplicates__Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Matching Rule Field</label>
    <nameField>
        <displayFormat>MRF-{0000000}</displayFormat>
        <label>Matching Rule Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matching Rule Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>